--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color:#404040;
+  height:100%;
+
 }
 
 .App-logo {
@@ -9,7 +12,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 0.3s linear;
   }
 }
 
@@ -27,7 +30,14 @@
 .App-link {
   color: #61dafb;
 }
-
+.head {
+  background-color: #000000;
+  color:#ffffff;
+  height: 6vh;
+}
+.headText{
+  padding-top:1vh;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +45,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+.artistImage{
+
 }
