--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,10 +1,12 @@
 .head {
-    background-color: #000000;
-    color:#ffffff;
-    height: 6vh;
-  }
+  background-color: #000000;
+  color: #ffffff;
+  height: 6vh;
+}
 
-.headText{
-    padding-top:1vh;
-    
-  }
+.headText {
+  padding-top: 1vh;
+}
+.menuIcon {
+  margin-top: -1vh;
+}
